UtahLiveDataTest/src/objects/r_appr__c.object
<CustomObject>
    <description>This is for the funding block in USBE</description>
    <fields>
        <fullName>APPR_CD__c</fullName>
        <label>APPR CODE</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APPR_NM__c</fullName>
        <label>APPR NAME</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DeletedInFINET__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deleted In FINET</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ExternalFINETId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>APPR_CD+FY</description>
        <externalId>true</externalId>
        <label>ExternalFINETId</label>
        <length>31</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FY__c</fullName>
        <formula>FiscalYear__r.FY__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fiscal Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FiscalYearName__c</fullName>
        <formula>FiscalYear__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FY</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FiscalYear__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MST: Fiscal Year</label>
        <referenceTo>FiscalYear__c</referenceTo>
        <relationshipLabel>Appropriations</relationshipLabel>
        <relationshipName>Appropriations1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Appropriation</label>
    <nameField>
        <label>APPR CODE</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Appropriations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>